[workspace]
members = [
	"agent",
	"bin",
	"bunyan",
	"client",
	"common",
	"database",
	"factory/aws",
	"factory/lab",
	"factory/propolis",
	"github/common",
	"github/database",
	"github/dbtool",
	"github/ghtool",
	"github/server",
	"server",
	"types",
	"xtask",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
aws-config = "0.55.3"
aws-credential-types = "0.55.3"
aws-sdk-s3 = "0.28.0"
aws-smithy-http = "0.55.3"
aws-smithy-types = "0.55.3"
aws-types = "0.55.3"
base64 = "0.13"
bytes = "1.1"
chrono = { version = "0.4", features = [ "serde" ] }
diesel = { version = "2.0.2", features = [ "sqlite", "extras", "serde_json" ] }
dirs-next = "2"
dropshot = { git = "https://github.com/oxidecomputer/dropshot", branch = "x-forwarded-for" }
futures = "0.3"
futures-core = "0.3"
getopts = "0.2"
glob = "0.3"
hiercmd = { git = "https://github.com/jclulow/hiercmd" }
hmac-sha256 = "1"
html-escape = "0.2"
http = "0.2"
hyper = "0.14"
hyper-staticfile = { version = "0.8.0", git = "https://github.com/jclulow/hyper-staticfile", branch = "jclulow" }
ipnet = "2.8"
jmclib = { git = "https://github.com/jclulow/rust-jmclib", features = ["sqlite"] }
jsonwebtoken = "7.2"
libc = "0.2.113"
new_mime_guess = "4"
octorust = { git = "https://github.com/oxidecomputer/third-party-api-clients", branch = "jclulow" }
pem = "2"
percent-encoding = "2.1"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
rand = "0.8"
reqwest = { version = "0.11", features = [ "json", "stream" ] }
rusoto_core = "0.48"
rusoto_credential = "0.48"
rusoto_ec2 = "0.48"
rusty_ulid = "1"
schemars = { version = "0.8", features = [ "chrono" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_repr = "0.1"
serde_urlencoded = "0.7"
serde_with = "1.10"
serde_yaml = "0.9"
slog = { version = "2.7", features = [ "release_max_level_debug" ] }
slog-bunyan = "2.4"
slog-term = "2.7"
smf = { git = "https://github.com/illumos/smf-rs.git" }
strum = { version = "0.25", features = [ "derive" ] }
tempfile = "3.3"
thiserror = "1"
tokio = { version = "1", features = [ "full" ] }
tokio-util = { version = "0.6.9", features = [ "io" ] }
toml = "0.5"
walkdir = "2.3"
zone = { version = "0.3", features = [ "async" ], default-features = false }
