[workspace]
members = [
	"agent",
	"bin",
	"bunyan",
	"client",
	"common",
	"database",
	"download",
	"factory/aws",
	"factory/lab",
	"factory/propolis",
	"github/client",
	"github/database",
	"github/dbtool",
	"github/ghtool",
	"github/hooktypes",
	"github/server",
	"github/testdata",
	"server",
	"sse",
	"types",
	"xtask",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-ec2 = "1"
aws-sdk-s3 = "1"
aws-types = "1"
base64 = "0.22"
bytes = "1.1"
chrono = { version = "0.4", features = [ "serde" ] }
dirs-next = "2"
dropshot = { git = "https://github.com/oxidecomputer/dropshot", branch = "x-forwarded-for" }
futures = "0.3"
futures-core = "0.3"
getopts = "0.2"
glob = "0.3"
hiercmd = { git = "https://github.com/jclulow/hiercmd" }
hmac-sha256 = "1"
html-escape = "0.2"
http = "0.2"
http-range = "0.1"
hyper = "0.14"
ipnet = "2.8"
jmclib = { git = "https://github.com/jclulow/rust-jmclib", features = ["sqlite"] }
libc = "0.2.113"
new_mime_guess = "4"
octorust = { git = "https://github.com/oxidecomputer/third-party-api-clients", branch = "jclulow" }
pem = "2"
percent-encoding = "2.1"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = [ "json", "stream" ] }
rust-toolchain-file = "0.1"
rusty_ulid = "1"
schemars = { version = "0.8", features = [ "chrono" ] }
sea-query = { version = "0.30", default-features = false, features = [ "derive", "attr", "backend-sqlite" ] }
sea-query-rusqlite = "0.5"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_repr = "0.1"
serde_urlencoded = "0.7"
serde_with = "1.10"
serde_yaml = "0.9"
sigpipe = "0.1"
slog = { version = "2.7", features = [ "release_max_level_debug" ] }
slog-bunyan = "2.4"
slog-term = "2.7"
smf = { git = "https://github.com/illumos/smf-rs.git" }
strum = { version = "0.25", features = [ "derive" ] }
tempfile = "3.3"
thiserror = "1"
tlvc = { git = "https://github.com/oxidecomputer/tlvc", version = "0.3.1" }
tlvc-text = { git = "https://github.com/oxidecomputer/tlvc", version = "0.3.0" }
tokio = { version = "1", features = [ "full" ] }
tokio-stream = "0.1"
tokio-util = { version = "0.6.9", features = [ "io" ] }
toml = "0.8"
usdt = "0.5"
zone = { version = "0.3", features = [ "async" ], default-features = false }
