[package]
name = "buildomat-agent"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = "1"
buildomat-openapi = { path = "../openapi" }
buildomat-common = { path = "../common" }
bytes = "1"
chrono = "0.4"
glob = "0.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
