[package]
name = "buildomat-agent"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = { workspace = true }
buildomat-common = { path = "../common" }
buildomat-client = { path = "../openapi" }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
