[package]
name = "buildomat-client"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[lib]
doctest = false

[dependencies]
buildomat-types = { path = "../types" }

anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
progenitor = { workspace = true }
progenitor-client = { workspace = true }
reqwest = { workspace = true }
rusty_ulid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
