[package]
name = "buildomat-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
buildomat-types = { path = "../types" }

anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
progenitor = { workspace = true }
progenitor-client = { workspace = true }
reqwest = { workspace = true }
rusty_ulid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
