[package]
name = "buildomat-common"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
new_mime_guess = { workspace = true }
rand = { workspace = true }
rusty_ulid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true }
slog-bunyan = { workspace = true }
slog-term = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
