[package]
name = "buildomat-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
new_mime_guess = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
rusty_ulid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true }
slog-bunyan = { workspace = true }
slog-term = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
