[package]
name = "buildomat-database"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
jmclib = { workspace = true }
sea-query = { workspace = true }
sea-query-rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true }
thiserror = { workspace = true }
