[package]
name = "buildomat-database"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
jmclib = { workspace = true }
sea-query = { workspace = true }
sea-query-rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true }
thiserror = { workspace = true }
usdt = { workspace = true }
