[package]
name = "buildomat-download"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
aws-sdk-s3 = { workspace = true }
bytes = { workspace = true }
dropshot = { workspace = true }
futures = { workspace = true }
http-body-util = { workspace = true }
http-range = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
slog = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
