[package]
name = "buildomat-jobsh"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
buildomat-client = { path = "../client" }
buildomat-common = { path = "../common" }
buildomat-sse = { path = "../sse" }

ansi-to-html = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dropshot = { workspace = true }
futures = { workspace = true }
html-escape = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
rust-toolchain-file = { workspace = true }
rusty_ulid = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
