[package]
name = "buildomat-openapi"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
futures-core = { workspace = true }
percent-encoding = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_urlencoded = { workspace = true }
