[package]
name = "buildomat-server"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
buildomat-common = { path = "../common" }
buildomat-database = { path = "../database" }
buildomat-download = { path = "../download" }
buildomat-types = { path = "../types" }

anyhow = { workspace = true }
aws-config = "0.55.3"
aws-credential-types = "0.55.3"
aws-sdk-s3 = "0.28.0"
aws-smithy-http = "0.55.3"
aws-types = "0.55.3"
bytes = { workspace = true }
chrono = { workspace = true }
dropshot = { workspace = true }
futures = { workspace = true }
getopts = { workspace = true }
http-range = { workspace = true }
hyper = { workspace = true }
rusty_ulid = { workspace = true }
schemars = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true }
tempfile = { workspace = true }
tlvc = { workspace = true }
tlvc-text = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
usdt = { workspace = true }
