[package]
name = "buildomat-server"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
buildomat-common = { path = "../common" }
buildomat-database = { path = "../database" }
buildomat-download = { path = "../download" }
buildomat-sse = { path = "../sse" }
buildomat-types = { path = "../types" }

anyhow = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-types = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
dropshot = { workspace = true }
futures = { workspace = true }
getopts = { workspace = true }
http-range = { workspace = true }
hyper = { workspace = true }
rusty_ulid = { workspace = true }
schemars = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true }
tempfile = { workspace = true }
tlvc = { workspace = true }
tlvc-text = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
usdt = { workspace = true }
