[package]
name = "buildomat-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
