[package]
name = "buildomat-factory-lab"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
buildomat-common = { path = "../common" }
buildomat-database = { path = "../database" }
buildomat-client = { path = "../openapi" }
chrono = { workspace = true }
diesel = { workspace = true }
dropshot = { workspace = true }
getopts = { workspace = true }
hyper = { workspace = true }
hyper-staticfile = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
rusty_ulid = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
slog = { workspace = true }
slog-term = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
