[package]
name = "wollongong-database"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
buildomat-common = { path = "../common" }
buildomat-database = { path = "../database" }
wollongong-common = { path = "../github_common" }
chrono = { workspace = true }
diesel = { workspace = true }
rand = { workspace = true }
rusty_ulid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
slog = { workspace = true }
thiserror = { workspace = true }
