[package]
name = "wollongong-dbtool"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
hiercmd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
wollongong-common = { path = "../wollongong-common" }
wollongong-database = { path = "../wollongong-database" }
