[package]
name = "wollongong-server"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
buildomat-bunyan = { path = "../buildomat-bunyan" }
buildomat-client = { path = "../buildomat-client" }
buildomat-common = { path = "../buildomat-common" }
chrono = { workspace = true }
dropshot = { workspace = true }
futures = { workspace = true }
hmac-sha256 = { workspace = true }
html-escape = { workspace = true }
hyper = { workspace = true }
jsonwebtoken = { workspace = true }
octorust = { workspace = true }
pem = { workspace = true }
reqwest = { workspace = true }
rusty_ulid = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
wollongong-common = { path = "../wollongong-common" }
wollongong-database = { path = "../wollongong-database" }
