[package]
name = "buildomat-factory-aws"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
buildomat-client = { path = "../../client" }
buildomat-common = { path = "../../common" }

anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
getopts = { workspace = true }
rusoto_core = { workspace = true }
rusoto_credential = { workspace = true }
rusoto_ec2 = { workspace = true }
rusty_ulid = { workspace = true }
serde = { workspace = true }
slog = { workspace = true }
slog-term = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
usdt = { workspace = true }
