[package]
name = "buildomat-factory-aws"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
buildomat-aws = { path = "../../aws" }
buildomat-client = { path = "../../client" }
buildomat-common = { path = "../../common" }
buildomat-types = { path = "../../types" }

anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-ec2 = { workspace = true }
aws-types = { workspace = true }
base64 = { workspace = true }
getopts = { workspace = true }
rusty_ulid = { workspace = true }
serde = { workspace = true }
slog = { workspace = true }
slog-term = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
usdt = { workspace = true }
