[package]
name = "buildomat-factory-gimlet"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
buildomat-common = { path = "../../common" }
#buildomat-database = { path = "../../database" }
#buildomat-download = { path = "../../download" }
#buildomat-client = { path = "../../client" }
#buildomat-types = { path = "../../types" }

anyhow = { workspace = true }
chrono = { workspace = true }
debug_parser = { workspace = true }
dropshot = { workspace = true }
getopts = { workspace = true }
hyper = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
schemars = { workspace = true }
sea-query = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
slog = { workspace = true }
slog-term = { workspace = true }
strum = { workspace = true }
tlvc = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
usdt = { workspace = true }
