[package]
name = "buildomat-factory-gimlet"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
buildomat-common = { path = "../../common" }
buildomat-database = { path = "../../database" }
#buildomat-download = { path = "../../download" }
buildomat-client = { path = "../../client" }
buildomat-types = { path = "../../types" }

anyhow = { workspace = true }
chrono = { workspace = true }
debug_parser = { workspace = true }
dropshot = { workspace = true }
getopts = { workspace = true }
hyper = { workspace = true }
iddqd = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
schemars = { workspace = true }
sea-query = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
slog = { workspace = true }
slog-term = { workspace = true }
strum = { workspace = true }
tlvc = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
usdt = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_os = "illumos")'.dependencies]
devinfo = { workspace = true }
