[package]
name = "buildomat-factory-oxide"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
buildomat-client = { path = "../../client" }
buildomat-common = { path = "../../common" }
buildomat-types = { path = "../../types" }

anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
getopts = { workspace = true }
serde = { workspace = true }
rusty_ulid = { workspace = true }
slog = { workspace = true }
slog-term = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
usdt = { workspace = true }
oxide = { workspace = true }
