[package]
name = "buildomat-factory-persistent"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
buildomat-client = { path = "../../client" }
buildomat-common = { path = "../../common" }

anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
getopts = { workspace = true }
glob = { workspace = true }
libc = { workspace = true }
rusty_ulid = { workspace = true }
serde = { workspace = true }
slog = { workspace = true }
slog-term = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
