[package]
name = "buildomat-factory-sp-test"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
buildomat-common = { path = "../../common" }
buildomat-database = { path = "../../database" }
buildomat-client = { path = "../../client" }
buildomat-types = { path = "../../types" }

anyhow = { workspace = true }
chrono = { workspace = true }
getopts = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
slog = { workspace = true }
slog-term = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
usdt = { workspace = true }
