[package]
name = "buildomat-factory-user"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
buildomat-common = { path = "../../common" }
buildomat-database = { path = "../../database" }
buildomat-client = { path = "../../client" }
buildomat-types = { path = "../../types" }

anyhow = { workspace = true }
async-compression = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
getopts = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true } 
rusty_ulid = { workspace = true }
schemars = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true }
slog-term = { workspace = true }
smf = { workspace = true }
strum = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
usdt = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
