[package]
name = "callaghan-gerrit-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures-core = "0.3.25"
reqwest = "0.11.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slog = "2.7"
buildomat-common = { path = "../../common" }

[dev-dependencies]
futures-util = "0.3.25"
tokio = { version = "1.24.1", features = ["full"] }
